// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component should accept a react Element as renderAs prop 1`] = `
<DocumentFragment>
  <p
    class="tabs"
  >
    Custom
  </p>
  <ul>
    This should be a p element
  </ul>
  <p />
</DocumentFragment>
`;

exports[`Tabs component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="tabs other-class test"
  >
    <ul />
  </div>
</DocumentFragment>
`;

exports[`Tabs component should have custom inline styles 1`] = `
<DocumentFragment>
  <section
    class="tabs"
    style="width: 200px; z-index: 1;"
  >
    <ul>
      This should be a section with custom styles
    </ul>
  </section>
</DocumentFragment>
`;

exports[`Tabs component should render 1`] = `
<DocumentFragment>
  <div
    class="tabs"
  >
    <ul>
      Content
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Tabs component should render 2`] = `
<DocumentFragment>
  <li
    class=""
  >
    <a>
      Content
    </a>
  </li>
</DocumentFragment>
`;

exports[`Tabs component should render as an html section 1`] = `
<DocumentFragment>
  <section
    class="tabs"
  >
    <ul>
      This should be a section
    </ul>
  </section>
</DocumentFragment>
`;

exports[`Tabs component should render propertly Inside Tabs 1`] = `
<DocumentFragment>
  <div
    class="tabs"
  >
    <ul>
      <li
        class=""
      >
        <a>
          Tab 1
        </a>
      </li>
      <li
        class=""
      >
        <a>
          Tab 2
        </a>
      </li>
      <li
        class=""
      >
        <a>
          Tab 3
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
